--- a/spring_ioc_anno/pom.xml
+++ b/spring_ioc_anno/pom.xml
@@ -56,5 +56,10 @@
             <artifactId>spring-test</artifactId>
             <version>5.2.7.RELEASE</version>
         </dependency>
+        <dependency>
+            <groupId>javax.annotation</groupId>
+            <artifactId>javax.annotation-api</artifactId>
+            <version>1.3.1</version>
+        </dependency>
     </dependencies>
 </project>
